문제5: 큰 단위부터 작은 단위 순서로 나눈 후 그 몫을 결과 배열에 저장하고 반환한다.